# ruin

./: CMakeLists.txt  compile_commands.json
src/: CMakeLists.txt  ruin.c  ruin.h  ruin_types.c  ruin_types.h
src/cmap/: map.c  map.h
src/cvec/: cvec.c  cvec.h
